# ams

./: .gitignore  .gitmodules  Dockerfile  README.md  diesel_trace_moodboard.bee  learn-auth.csproj  learn.db
api/: .env  Cargo.toml  ams.sqlite  justfile
api/src/: controllers.rs  endpoints.rs  extractors.rs  lib.rs  main.rs
api/src/controllers/: balance_controller.rs  billing_controller.rs  customer_management_controller.rs  dreg_price_endpoint.rs  make_payment_page_endpoint.rs  payment_history_endpoint.rs  price_controller.rs  retrieve_data_controller.rs  taking_record_endpoint.rs  user_management_enpoint.rs
api/src/endpoints/: customer_endpoints.rs  dreg_price_endpoint.rs  informations_endpoint.rs  make_payment_page_endpoint.rs  payment_history_endpoint.rs  taking_record_endpoint.rs  user_management_enpoint.rs
api/src/extractors/: calculated_passkey_extractor.rs
api/src/setups/: seaorm.rs
api/static/: index.html
api/static/assets/: AdminGuardPage-BO351q3T.js  AdminGuardPage-CD3G0FTn.css  AdminLayout-BKnzvxvH.js  AdminLayout-BwY1-30k.css  AdminLayout-DAlwwF7U.js  AdminLayout-Dk09ykdS.css  AdminPage-C8kWs4wQ.js  Calendar-C7hCejGk.js  Calendar-CfoTxPz1.css  CustomerTakingPage-BPtxw-Fg.js  CustomerTakingPage-Bzv8hnCV.css  DataListUtil-DLK3g0eA.js  ListPaymentPage-59V7hi7x.js  ListPaymentPage-C1TsXh7z.css  MainLayout-DsqiV4fN.js  MakePaymentPages-CL1ivkR1.css  MakePaymentPages-D15t_dKE.js  QueryClientProvider-DhxQ09mG.js  Scroller-BcfPVuNP.js  Scroller-CnVDG4b7.css  Scroller-vb5K4257.js  Toaster-D9QYH5nK.js  UpdateTakingRecordPage-ChHaGsW8.js  UserManagementPage-Ck2soXdR.css  UserManagementPage-DjA-cFt7.js  UserManagementPage-Dkx6Iwlw.js  VirtualKeypad-BNjNZjnh.js  VirtualKeypad-lAIHRzk-.css  ams-icon-bqzDty30.js  avatar-CMyZ4H7r.js  center-DefDiguQ.js  chunk-K6CSEXPM-Bn6mf80d.js  close-button-UJZd7FY4.js  customer-money-api-DmVklbqs.js  dreg-price-api-CE6ObdYP.js  entry.client-CJaEprO6.js  format-as-rupiah-C_Lq9mCl.js  format-date-id-D-ORLjoU.js  header-information-contant-B3N2sSri.js  image-DFImKJsQ.js  (+18 more)
app/: .env  (+8 more)
app/src-tauri/: .env  Cargo.toml  ams.db  ams.sqlite  expand.rs  justfile  tauri.conf.json
app/src-tauri/ams_macro/: Cargo.toml
app/src-tauri/ams_macro_test/: expand.rs
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: authentication.rs  builder.rs  commands.rs  helper.rs  lib.rs  main.rs  migration.rs  model.rs  query.rs  repository.rs
backend/src-tauri/: .env  Cargo.toml  ams.db  expand.rs  tauri.conf.json
backend/src-tauri/custom_macro/: Cargo.toml
backend/src-tauri/src/: helper.rs  lib.rs  main.rs  migration.rs  model.rs  repository.rs
entity/: .gitignore  Cargo.toml  balance.rs  balance_billing.rs  billing.rs  billing_retrieve_data.rs  customer.rs  data_record.rs  hash_password_table.rs  lib.rs  money_history_table.rs  payment_history_table.rs  prelude.rs  price.rs  price_history_table.rs  production_record_table.rs  retrieve_data.rs  soybean_price_history_table.rs  taking_record_table.rs  user_table.rs  user_table_expanded.rs
migration/: .gitignore  Cargo.toml  README.md  ams.sqlite  db.sqlite  justfile  random_one_year_data.nu
migration/entity/: mod.rs  prelude.rs  soybean_price_history_table.rs  taking_record_table.rs
migration/src/: lib.rs  main.rs  migration1.rs  migration2.rs  migrations.rs  seeds.rs
migration/src/migration1/: m202509200753_create_customer_table.rs  m202509200753_create_user_table.rs  m202509200754_create_production_record_table.rs  m202509200804_create_taking_record_table.rs  m202509200811_create_price_history_table.rs  m202509200815_create_payment_history_table.rs  m202509200818_create_soybean_price_history_table.rs  m202509200820_create_money_history_table.rs  m202509211820_create_password_hash_table.rs  m202602171000_create_prices_table.rs  m202602171046_create_balance_table.rs  m202602171053_create_billing_table.rs  m202602171404_create_retrieve_data_table.rs  m202602171405_create_billing_retrieve_data_table.rs  m202602171412_create_balance_billing_table.rs  m202602171414_create_data_record_table.rs  m202602171438_seeding_customer.rs  m202602171440_seeding_price.rs  m202603071440_seeding_balance.rs
migration/src/migration2/: m202509200832_create_foreign_key_taking_record.rs  m202509200843_create_foreign_key_payment_history.rs  m202509200903_create_foreign_key_production_record.rs  m202509200909_create_foreign_key_money_history.rs
migration/src/migrations/: m20250727_000001_create_table.rs
migration/src/models/: payment_record.rs  payment_taking.rs  price_record.rs  production_record.rs  saving_record.rs  taking_record.rs  user.rs
migration/src/seeds/: price_history_seed.rs  soybean_price_seed.rs  user_seeds.rs
sea-migration/: Cargo.toml  db.sqlite  justfile
sea-migration/src/: entity.rs  lib.rs  main.rs  models.rs  traits.rs
sea-migration/src/entity/: cake.rs  cake_expanded.rs  cake_filling.rs  cake_filling_price.rs  filling.rs  fruit.rs  vendor.rs
sea-migration/src/models/: payment_record.rs  payment_taking.rs  price_record.rs  production_record.rs  saving_record.rs  taking_record.rs  user.rs
sea-migration/src/traits/: migrationable.rs
shared/: .env  Cargo.toml  justfile
shared/.cargo/: config.toml
shared/bindings/: BalanceBilling.ts  BalanceWithCustomer.ts  Billing.ts  BillingCreate.ts  BillingInfo.ts  BillingRetrieveData.ts  BillingRetrieveDataWithBillAndAmount.ts  Customer.ts  DataRecordGetAllProps.ts  ProductionRecord.ts  RetrieveData.ts  RetrieveDataCreate.ts  RetrieveDataCreateOrUpdate.ts  RetrieveDataType.ts  RetrieveDataWithCustomerAndPrice.ts  SoyDosageCountRecord.ts  TransactionType.ts
shared/src/: commands.rs  controllers.rs  helper.rs  lib.rs  models.rs  page_models.rs  repositories.rs  shared_fn.rs  singletons.rs  utilities.rs
shared/src/commands/: base_command_trait.rs  customer_money_command.rs  dreg_price_command.rs  information_command.rs  make_payment_command.rs  payment_history_command.rs  pick_record_operation_command.rs  production_record_command.rs  taking_record_command.rs  taking_record_command.rs.bak  (+1 more)
(+606 files in other folders)
