[package]
name = "ams-api"
version = "0.1.0"
edition = "2024"

[dependencies]
ams_shared = {path = "../shared"}
ams_entity = {path = "../entity"}

chrono = "0.4.39"
actix-web = "4"
serde = "1.0.226"
async-trait = "0.1.89"
utoipa = {version = "5.4.0", features = [
  "chrono"
]}
utoipa-swagger-ui = "9.0.2"
utoipa-actix-web = "0.1.2"
