[package]
name = "ams_api"
version = "0.1.0"
edition = "2024"

[dependencies]
ams_shared = {path = "../shared"}
ams_entity = {path = "../entity"}

chrono = "0.4.39"
actix-web = "4"
dotenvy = "0.15.7"
serde = "1.0.226"
async-trait = "0.1.89"
utoipa = {version = "5.4.0", features = [
  "chrono"
]}
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
actix-cors = "0.7.1"
env_logger = "0.11.8"
num-format = "0.4.4"
actix-files = "0.6.9"
