[package]
name = "ams_entity"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.16", features = [ 
  "sqlx-sqlite", 
  "runtime-tokio-native-tls", 
  "macros", 
  "with-chrono"
] }
serde = "1.0.228"
utoipa = {version = "5.4.0", features = [
  "chrono"
]}

[lib]
path = "lib.rs"
