[package]
name = "ams_entity"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "2.0.0-rc.32", features = [ 
  "sqlx-sqlite", 
  "runtime-tokio-native-tls", 
  "macros", 
  "with-chrono"
] }
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
utoipa = {version = "5.4.0", features = [
  "chrono"
]}

[lib]
path = "lib.rs"
