[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.85.0"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
ams_macro = {path = "../macro"}
chrono = "0.4.42"
sea-query = { version = "0.32.7", features = ["derive"] }

[dependencies.sea-orm-migration]
version = "2.0.0-rc.32"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  # "sqlx-postgres",       # `DATABASE_DRIVER` feature
  "sqlx-sqlite", 
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "with-chrono"
]
