[package]
name = "ams_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
ams_macro = { path = "../macro" }
ams_entity = { path = "../entity" }

chrono = "0.4.39"
dotenvy = "0.15.7"
tokio = { version = "1.43.0", features = ["full"] }
once_cell = "1.20.3"
sea-orm = { version = "1.1.16", features = [ 
  "sqlx-sqlite", 
  "runtime-tokio-native-tls", 
  "macros", 
  "with-chrono"
] }
async-once-cell = "0.5.4"
