[package]
name = "ams"
version = "0.1.0"
description = "soybean dregs selling"
authors = ["Ahsanu Amala"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ams_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
proc-macro = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]

syn = { version = "2.0", features = ["derive"] }
quote = "1.0"

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = ["runtime-tokio"] }
sea-query = "0.32.1"
sea-query-binder = { version = "0", features = [
  "sqlx-sqlite",
  "with-chrono",
  "with-json",
  "with-time",
] }
chrono = "0.4.39"
dotenvy = "0.15.7"
tokio = { version = "1.43.0", features = ["full"] }


custom_macro = { path = "./custom_macro" }
diesel = { version = "2.2.7", features = ["sqlite", "postgres", "chrono"] }
diesel_migrations = "2.2.0"
refinery = "0.8.16"
sea-orm = { version = "1.1.6", features = [
  "sqlx-all",
  "runtime-tokio",
  "macros",
] }
once_cell = "1.20.3"
argon2 = "0.5.3"

[dependencies.sea-orm-migration]
version = "1.1.6"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio",
]
