[package]
name = "ams"
version = "0.1.0"
description = "🥔 AMS - Ampas Management System is a personal project built to manage the selling of soybean dregs (ampas)."
authors = ["Ahsanu Amala"]
edition = "2021"

[lib]
name = "ams_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
proc-macro = true

[dependencies]
ams_macro = { path = "../../macro" }
ams_entity = { path = "../../entity" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.39"
dotenvy = "0.15.7"
tokio = { version = "1.43.0", features = ["full"] }
diesel = { version = "2.2.7", features = ["sqlite", "postgres", "chrono"] }
diesel_migrations = "2.2.0"
once_cell = "1.20.3"
argon2 = "0.5.3"

sea-orm = { version = "1.1.16", features = [ 
  "sqlx-sqlite", 
  "runtime-tokio-native-tls", 
  "macros", 
  "with-chrono"
] }
# sea-query = "0.32.1"
# sea-query-binder = { version = "0", features = [
#   "sqlx-sqlite",
#   "with-chrono",
#   "with-json",
#   "with-time",
# ] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
