[package]
name = "ams"
version = "0.2.0"
description = "🥔 AMS - Ampas Management System is a personal project built to manage the selling of soybean dregs (ampas)."
authors = ["Ahsanu Amala"]
edition = "2021"

[lib]
# staticlib is for android/ios 
# crate-type = ["staticlib", "cdylib", "rlib"]
#
# use this crate-type make rust analyzer faster 
crate-type = ["rlib"]
name = "ams_lib"
proc-macro = true

[dependencies]
ams_shared = {path = "../../shared"}

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.39"
dotenvy = "0.15.7"
tokio = { version = "1.43.0", features = ["full"] }
once_cell = "1.20.3"
argon2 = "0.5.3"

async-once-cell = "0.5.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
