[package]
name = "ams"
version = "0.1.0"
description = "soybean dregs selling"
authors = ["Ahsanu Amala"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ams_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = ["runtime-tokio"] }
sea-query = "0.32.1"
sea-query-binder = { version = "0", features = [
  "sqlx-sqlite",
  "with-chrono",
  "with-json",
  "with-time",
] }
chrono = "0.4.39"
dotenvy = "0.15.7"
tokio = { version = "1.43.0", features = ["full"] }


custom_macro = { path = "./custom_macro" }
